--- a/index.html
+++ b/index.html
@@ -885,6 +885,375 @@ apuntar
 aquel por quien se vive
 aquellos que
 aquí
+árabe
+Arabia Saudita
+aracnido
+arado de bueyes
+arado
+Aragón
+aragonés
+arándano
+arándano
+araña
+arañas
+araucaria
+árbol de cerezo
+árbol de mango
+árbol de tamarindo
+árbol de tejocote
+árbol de zapote
+árbol de zarzamora
+árbol del cacao
+árbol divino
+árbol frutal
+árbol
+árbol nodriza
+árboles
+arbolito 
+arbusto
+arcabuz
+arcada
+arce
+archipiélago
+arcilla
+arco de tiro
+arco del pie
+arco iris
+arco
+arco toral
+arder
+ardilla de agua
+ardilla
+ardillón
+arena
+arena fina
+arenal
+arenoso
+arete de flores
+arete
+arete
+arete
+aretillo
+argamasa
+Argelia
+argelino
+Argentina
+argentino
+argentino 
+argumento literario
+Aridoamérica
+arista
+arma
+armadillo
+armadillos
+armadura
+armas
+armazón
+Armenia
+armenio
+armiño
+armónica
+aro
+aro metálico
+aroma
+aromático
+aromatico
+aromatizante
+aromatizante
+arpa
+arqueólogía
+arqueólogo
+arquitecto
+arquitectónico
+arquitectura
+arquivolta
+arrabal
+arraigado
+arraigar
+arrancar
+arrastrado
+arrastrar 
+arrebatado
+arrebatar
+arrebatar 
+arrebatar de las manos
+arrebato
+arrecife
+arreglar 
+arreglo
+arremedado
+arremedar
+arremedo
+arrepentido
+arrepentimiento
+arrepentirse 
+arriba
+arriba
+arrimado
+arrimar
+arrodillarse
+arrogancia
+arrojar
+arrojar 
+arrojarse
+arrollado
+arrollar
+arroparse
+arroyo
+arroz
+arruga
+arrugado
+arrugar
+arrugarse
+arrugarse
+arrugarse
+arrullar
+arrullo
+arte de escribir
+arte
+arteria
+arterias
+artesa
+artesanal
+artesano
+artesano
+articulación de los dedos
+articulo
+artículo
+artificial
+artilleria
+artillería
+artista
+artista
+Aruba
+arzobispado
+arzobispo
+asado
+asador
+asador
+asalariado
+asalariar
+asar en el horno 
+asar
+asco
+asedo
+asenso
+asentarse
+aserradero
+aserrín
+asesino
+asfixia
+asfixiado
+asfixiarse
+asfixiarse
+así
+así como
+así es
+así está
+así nada más
+así se dice
+así son
+así
+Asia
+asiático
+asiento
+asir
+asistente
+asma
+asma
+asociado
+asoleado
+asoleamiento
+asolear 
+asolearse
+asomado
+asomar
+aspa
+áspero
+áspero
+asqueroso
+astilla
+astilla
+astillar
+astro
+astrología
+astrólogo
+astrólogo 
+astronauta
+astronauta
+astronomía
+asturiano
+asturiano 
+Asturias
+astuto
+astuto
+asunción
+asustado
+asustado
+asustar
+asustarse 
+atacar
+atado
+atadura de años
+atajar
+atajo
+ataque
+atar algo
+atascado
+atascar
+ataud
+ataviado
+ateísmo
+atemoztli 
+Atenas
+atención
+Atenco 
+atender
+atendido
+atento
+atento
+ateo
+ateo
+aterrorizar
+atesorar
+atestiguado
+atestiguar 
+Atitalaquia 
+Atitlán 
+atizar el fuego
+atizar el fuego 
+Atlacomulco 
+atlante
+Atlantida
+atleta
+atleta
+atletismo
+Atlixco 
+atmósfera
+atole de elote
+atole de frutas
+atole de guayaba
+atole de maíz tierno
+atole de pinole
+atole
+atolero
+atolladero
+átomo
+Atotonilco
+Atoyac
+atraer 
+atraído
+atrapado
+atrapar
+atrapar
+atrás de él 
+atrás
+atrever
+atreverse
+atrevido
+atrevimiento
+atributo
+atril
+ayuda
+audiencia
+auditorio
+auge
+augurio
+aula
+aullar 
+aullido
+aumentado
+aumentar el precio 
+aumentar
+aún no
+aún no
+aún
+aunque
+aura
+aurora
+ausente
+Australia
+australiano
+Austria
+austriaco
+auto
+autobús
+autodidacta
+autopista
+autoridad
+autoridades
+auyentar 
+avance
+avaricia
+avaricia
+avaricia
+avaro
+ave de mal agüero
+ave
+ave ponedora de huevos
+avefría moñuda
+avena
+avenida
+avenida
+aventador
+aventura
+aventurero
+avergonzado
+avergonzar
+avergonzarse moralmente
+aves
+avestruz
+aviador
+avión de combate
+avión
+avión
+avioneta
+avisar 
+aviso
+avispa dorada
+avispa
+avispa roja
+avoceta
+Axayacatl
+axila
+Ayala
+ayer 
+ayocote
+ayudante
+ayudar
+ayudar por interés 
+ayudar
+ayunar
+ayuno
+ayuntamiento
+Azacualpa 
+azadón
+azadón
+azar
+Azcapotzalco 
+azerbaijano
+Azerbaiyán
+azerbaiyano
+azor
+azote
+azotea
+azteca
+aztecas
+azúcar
+azucarado
+azucarar
+azucena
+azuela
+azufre
+azul añil
+azul cielo
+azul
+azul marino
+azul rey
+azul turquesa
+azulejo
+azulejo
+azul-morado
 </div>
 
 <div class="nahuatl">
@@ -1736,6 +2105,375 @@ axiltia 3
 ipoalnemoani
 ahquihuan
 nican
+arabiatlacatl
+Arabia
+pepeyoctli 2
+cuacuahue yelimiqui
+yelimiqui
+Aragonia
+aragoni
+texocapolin
+texocapolcuahuitl
+tocatl
+tocameh
+acxoyaocotl
+chilcapolcuahuitl
+manilacuahuitl
+palxococuahuitl
+texocuahuitl
+tzapocuahuitl
+amaxocuacuahuitl
+cacahuacuahuitl
+tecocuahuitl
+xococuahuitl
+cuahuitl
+chichihualcuauhco
+cuauhmeh
+cuacuauhton
+tzatzaztli
+metlequiquiliztli
+huitoliuncoyan
+ahuachichitl
+tlalhuaque
+tlaltepalcatl
+tlahuitolli
+xocpalli
+cozamalotl
+huitoliuhqui
+teculolli
+tlatla
+ahuitzotl 1
+tlachalotl
+mototli
+xalli
+xalpicilli
+xalpan
+xallo
+xochinacazpiloni
+champochtli
+tlapilolli
+pipilotl
+atexochitl
+tenezoquitl
+Algeria
+algeriatl
+Arxentina
+arxentinecatl
+arxentinatl
+amoxtlapehualiztli
+Zacachichimecapan
+cuauhtexticatontli
+yaotlatquitl
+ayotochtli
+ayotochtin
+tlatecpilotoliztli
+teyaochihualiztli
+colotli 1
+Armenia
+armenitecatl
+iztacoyotl
+cuicaxitl
+telolotl
+tepozpilolli
+xochiahuiyaliztli
+ahuiyo
+ahuiyac
+xochipoctli
+popochtli
+mecacuicapantli
+tepaltlahtomatiliztli
+tepaltlahtomatini
+calmanani
+calmanayo
+calmanayotl
+tlanololli 1
+tenanquiahuatl
+nelhuayo
+nelhuayoltia
+huiloni
+tlahuilanani
+huilana
+tlacuitihuetziani
+acitihuetzi
+cuitihuetzi
+macuilia
+tlacuitihuetziliztli
+atzatzazmolli
+yectilia
+tlayectiliztli
+chichihuilli
+chichihuia
+chichihuiliztli
+moyolcuepqui
+neyoltequipacholiztli
+yolcohuia
+aco 1
+acopa
+iconilli
+iconia
+motlancuaquetza
+nacaztzonteyotl
+tlaxilia
+tepehua 2
+momayahui
+tecochtlalli
+cochtlaza 2
+tapachquentia
+apachacatl
+iztachtli
+xolochtic
+pachicihini
+xolocholoa
+colochahui
+pilihui
+xolochoa
+cochtequi
+cochtequiliztli
+tlacuilocayotl
+toltecayotl
+ezcopitzactli
+ezcopitzactin
+cuauhapaztli
+amantolli
+tlamachqui
+amantecatl
+mapiliztli
+centlamantli
+inic
+tlatoltecahuilli
+tlequiquiztli
+tequiquiliztli
+tlacuicani
+toltecatl
+Aroba
+teopizcateocalli
+teopixcatlahtoani
+tlatzoyolli
+tlatzoyoloni
+nacacaxitl
+tlaxtlahuilli 1
+tlaxtlahuia
+tlemati
+tzoyonia
+tlailtializtli
+xocotac 2
+azauhyatl
+motlalia
+cuauhxoxouhtlaliztli
+cuauhtlazolli
+temictiloni
+itomiquiztli
+iyomicqui
+iyomiqui
+popocmiqui
+ihquin
+in yuh
+ihquinyezqui
+ihqui
+zan ihcon
+in yuh mihtotica
+ihconimeh
+yuhquin
+Axia
+axiatl
+cuauhicpalli
+mapachoa
+tepantilo
+yolixihuic
+neihotzacualiztli
+nechicolli
+tonalhuilli
+tonatiuhliztli
+tonalhuia
+tonalmiqui
+quiquixtic
+quiquixtia
+aztectli
+chachacuac
+tilictic
+motlailtiani
+zonehuilli
+ximalli
+zonehui
+ilhuicatlamatli
+ilhuicatlamatiliztli
+ilhuicatlatilizmatini
+tlachixqui
+citlaltepozacalteyacanqui
+ilhuicanemini
+ilhuicatlatiliztli
+axturiatecatl
+axturiatl
+Axturia
+minatini
+yolizmatqui
+tlecolizcayotl
+mamahtiloc
+mamahtli
+mohtia
+momauhtia 1
+petlachiuhqui
+aompac
+xiuhmolpilli
+tzacuilia
+otzaliztli
+petlachihuiliztli
+tlatacatzohua
+potzaqui 2
+potzaqui 1
+micpetlacalli
+motopalquetzqui
+atle teoyotl
+atemoztli
+Atenia
+tlayehuacaliztli
+Atenco
+ina
+inalli
+inani
+tlatta
+ateoni
+amoteoni
+mamauhtia 1
+teocuitlapia
+temelahuani
+melahua
+Atlitalaquiac
+Atitlan
+tletoquilia
+pipitza
+Atlacomolco
+atlantecatl
+Atlantico
+painalton
+neyeconi
+cenetlaloliztli
+Atlixco
+ehecaliztli
+eloatolli
+xocoatolli
+xaxocoatolli
+xiloatolli
+pinolatolli
+atolli
+atolchiuhqui
+zoquicoayan
+achitotontzin
+Atotonilco
+Atoyac
+tlatlacohuiloa
+tlatlacohuiloni
+pachouhqui
+pachohua
+matlalhuia 1
+icuitlapan
+icampa
+ixehui
+ateixcoa
+quequexquic
+ateixcotlachializtli
+tenamactli
+tepoztlaconi
+icneliliztli
+pohualtlahtolli
+tlacacoayan
+coquitzaliztli
+titzahuitl
+nemachtilcalli
+coyolia
+tecoyoliztli
+tlatlapilhualli
+tzontia
+tlapilhuia
+ayamo
+ocachi
+oc
+mazqui
+chamatl 1
+tlahuiztli 1
+atac
+Austlalia
+austlaltecatl
+Axtria
+axtriatl
+tepozmalacatl
+calmimilolli
+momoachtiani
+hueyohtli
+tequihuac
+tequihuaque
+cotoca
+nemililiztli
+aneconatlaniliztli
+teyaohuacaliztli
+atlequicahualiztli
+nexicolli
+poxacuatl
+tototl 1
+tlatlaztli
+acitli
+mecatlaulli
+altepeohtli
+ochpantli
+ehecatzacahuiloni
+tetzauhyotl
+tetzauhyo
+pinahualli
+pinahua
+pinahui
+totomeh
+tlacatototl
+acalpatlatini
+tepoztototl teyaochihuani
+acalpatlani
+tepoztototl
+tepoztotontli
+tlaquehuia
+tenemachtiliztli
+quetzalmiahuatl
+etzatl
+chilpatl
+acoatototl
+Axayacatl
+ciyacatl
+Mapachtlan
+yolhua
+ayocotli
+tlapalehuiani
+icnelia
+macoa
+palehuia
+tzahua
+ayatlequicuac
+coatlacan
+Atzacualpan
+tlaltepoztli
+huictli
+patolli 1
+Azcapotzalco
+azerbaiyatl
+Azerbayania
+azerbaiyanecatl
+yoaltohtli
+temecahuitequiliztli
+tlapantli
+aztecatl
+aztecah
+chiancacatl
+chiancacayo
+chiancaca
+macpalxochitl
+matepoztli
+yolimochitl
+yahuitl
+xoxouhtic
+texotli
+poxauhtic
+matlaltic
+xiuhtic
+xiuhxamixtli
+texotototl
+yahuic
 </div>	 
 		 
 	 </body>
