--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ a espaldas
 a esta hora
 a esta parte
 a 
-a la derecha 
+a la derecha
 a los lados
-a los pies de 
+a los pies de
 a menudo
 a mí
 a nosotros
@@ -63,22 +63,22 @@ a vosotros
 a
 a
 ababol
-abacería 
+abacería
 abacero
 abad
-abadesa 
-abadía 
+abadesa
+abadía
 abajo
-abalanzar 
+abalanzar
 aballestar
 abanderado
-abanderado 
+abanderado
 abanderamiento
 abanderar
-abanicar 
+abanicar
 abanico
-abaratar 
-abarca 
+abaratar
+abarca
 abarcar 
 abasto
 abatanar
@@ -128,11 +128,11 @@ abrazo
 abrelatas
 abreviado
 abreviar
-abreviatura 
+abreviatura
 abrigado
 abrigado
 abrigar
-abrigar 
+abrigar
 abrigo
 abril
 abrir la boca
@@ -141,29 +141,29 @@ abrir los ojos
 abrir
 abrir
 abrochado
-abrochar 
+abrochar
 abrojo
 abrotoñar
 absceso
 absoluto
-abstinencia 
-abuela 
+abstinencia
+abuela
 abuelo
 abuelos
 abuhado
-abundancia 
+abundancia
 abundante
 abundar
 aburrido
-acabar 
 acabar
 acabar
-academia 
+acabar
+academia
 acaecer
-Acajutla 
-Acalometochtli 
-Acamapichtli 
-acamaya 
+Acajutla
+Acalometochtli
+Acamapichtli
+acamaya
 acampanado
 acanalado
 acanalado
@@ -174,17 +174,17 @@ acaparado
 acaparador
 acaparamiento
 acaparar
-Acaponeta 
-Acapulco 
+Acaponeta
+Acapulco
 acapulqueño
-acariciar 
+acariciar
 acarrear
 acarreo
 acaso
-acatar 
-Acatlán 
+acatar
+Acatlán
 acatólico
-Acatzingo 
+Acatzingo
 acaudillar
 Acayucan
 acceso de la ciudad
@@ -192,50 +192,50 @@ acceso
 accesorio
 accesorio personal
 acedarse
-acedera 
+acedera
 aceite
 aceite
-aceleración 
-acelerar 
-acémila 
-aceptar 
+aceleración
+acelerar
+acémila
 aceptar
-acequia 
-acequia 
+aceptar
+acequia
+acequia
 acerca de
 acercamiento
 acercar
-acercar 
+acercar
 acercar
 acercarse
 acero
 acertado
-acertar 
+acertar
 achacoso
 achiote
 acierto
 acocil
 acocote
 acocote
-Acolman 
-Acolmiztli 
+Acolman
+Acolmiztli
 acomedido
-acometido 
+acometido
 acomodarse
 acompañado
 acompañamiento
 acompañante
-acompañar 
-acompañar 
+acompañar
+acompañar
 acongojado
-acongojar 
+acongojar
 aconsejado
-aconsejar 
+aconsejar
 acordar
 acordarse
 acordeón
 acosado
-acosar 
+acosar
 acoso
 acostado
 acostarse
@@ -245,30 +245,30 @@ acostumbrar
 acrecentar
 acreedor
 acribillar
-acrópolis 
+acrópolis
 activo
 acto lésbico
 acto
-Actopan 
-actuación 
+Actopan
+actuación
 actualmente
 actuar
-acuarela 
-acuarelas 
+acuarela
+acuarelas
 acuario
 acuario
 acuático
-acuchillar 
+acuchillar
 acudir
 acueducto
 acuerdo
 acuerdo
 acumular
-acusación 
+acusación
 acusado
 acusante
-acusar 
-acusar 
+acusar
+acusar
 adaptado
 adeherir
 adelantar
@@ -276,61 +276,61 @@ adelante
 adelgazado
 adelgazamiento
 adelgazar
-adelgazar 
+adelgazar
 además
 adentro
 aderezado
-aderezar 
+aderezar
 aderezo
 adicionar
 adiestrado
 adiestrar
 adinerado
 adios
-adivinanza 
+adivinanza
 adivinar
 adivino de la tierra
 adivino
 adjetivo
 adjetivo
 adjudicado
-adjudicar 
-adjudicarse 
-administración 
+adjudicar
+adjudicarse
+administración
 administrador
 administrador
 administrar
 administrar
 administrativo
 admirable
-admiración 
-admirar 
+admiración
+admirar
 admitido
-admitir 
+admitir
 admitir
 adobar
 adobe
 adobo
 adolescencia femenina
-adolescencia masculina 
+adolescencia masculina
 adolorido
 adonde
-adopción 
-adoptado 
-adoptar 
+adopción
+adoptado
+adoptar
 adorable
-adoración 
+adoración
 adorar
-adormecer 
+adormecer
 adormecer
 adormecido
 adormecimiento
 adornado
 adornado
 adorno de papel
-adorno m
-adorno m
-aduana 
+adorno
+adorno
+aduana
 adueñar
 adulterio
 adultero
@@ -346,15 +346,15 @@ aeropuerto
 afabilidad
 afamar
 afeitar
-afeitar 
+afeitar
 afeite
 Afganistán
 afgano
 aficionado
 afilado
 afilado
-afilar 
-afirmar 
+afilar
+afirmar
 afligido
 afligir
 aflojar
