--- a/index.html
+++ b/index.html
@@ -1254,6 +1254,211 @@ azul turquesa
 azulejo
 azulejo
 azul-morado
+baba
+babero
+Babilonia
+babilonio
+babosa
+baboso
+bacinica
+Bagdag
+bagre
+Bahamas
+bahía
+Bahrain
+bailar 
+bailar asidos de la mano 
+bailarín
+bailarín
+baile
+baile
+Baja California
+Baja California Sur
+bajo
+bajo
+bajo
+bala
+balacera
+balcón
+baldío
+balear
+ballena
+ballesta
+ballet
+balneario
+balón
+balsamo
+bambú
+bambú musical
+banca
+banco
+banco
+banda
+bandera
+bandera
+banderín
+banderola de barco
+bandurria
+banqueta
+bañado
+bañar
+bañarse
+bañarse en temazcal
+bañera
+baño
+baño
+baños
+baqueta
+barandal
+barato
+barato 
+barato
+barato
+barba blanca
+barba
+barba negra
+barba roja
+barbacoa
+barbacoiero
+barbado
+Barbados
+barbaro
+bárbaro de los llanos norteños
+bárbaro
+barbasco
+barbechar
+barbería
+barbero
+barbilla
+Barcelona
+barco
+barniz
+barnizador
+barnizar 
+barquillo
+barra de metal
+barra
+barranca
+barranca
+barranco
+barras para gimnasio
+barrena
+barrenador
+barrendero
+barrendero 
+barrer
+barrido
+barriga
+barriga
+barriga
+barrigón
+barril
+barrio de extranjeros
+barrio
+barro
+barro
+báscula
+básico
+básquetbol
+bastante
+bastante
+bastantes
+bastardo
+bastón
+basura
+basurero
+bat
+bata de baño
+batalla
+batea
+batidora
+batimiento
+baúl
+baúl
+bautismo
+bautisterio
+bautizar
+bautizo
+bebe
+bebé
+bebedor
+beber
+beber 
+beber agua
+beber caldo sin cuchara
+bebés
+bebible
+bebida alcohólica
+bebida embriagante
+bebida
+bejuco
+Belarus
+belga
+Belgica
+Belice
+beliceño
+belleza
+bello
+bello
+bello
+bellota
+Belmopan 
+bendición
+bendito
+beneficio
+benignidad
+Benin
+benjamín
+berenjena
+Berlín
+bermellón
+bermellón
+bermuda
+Bermudas
+Berna
+berrendo
+berro
+besar
+besar 
+beso
+bestial
+bestial
+betún
+bi
+biblia
+bibliografía
+biblioteca
+bibliotecario
+bíceps
+bici
+bicicleta
+bicicleta
+bienaventuranza
+bienechor
+bienvenido
+bienvenidos
+bifurcado
+bifurcar
+bigote
+Bilbao
+bilingüe
+billete
+binocular
+biología
+biologo
+Birmania
+birmano
+bisabuela
+bisabuela
+bisabuelo
+bisexual masculino
+bisexualidad
+bisnieta
+bisnieto
+bisonte
+bisturí
+bizcoso
+biznaga
 </div>
 
 <div class="nahuatl">
@@ -2474,6 +2679,211 @@ xiuhtic
 xiuhxamixtli
 texotototl
 yahuic
+iztactli
+tecualantiloni
+Babilonia
+babilotl
+tlalconetl
+tecualacquizani
+cuitlacaxitl
+Babilon
+axolomichin
+Bahamah
+anepalco
+Bahrain
+totia
+nahua 1
+macehuani
+mitotiani
+mitotiliztli
+mitotilli
+Mexicatl California
+Mexicatl California Huitztlan
+amotlacpac
+ahuatetztli 1
+amo cuauhtic
+tepoztlachtli
+mictotopotztli
+ohtlachialotl
+acahualco
+balearitecatl
+hueymichin
+tepoztlahuiliztli
+netotiliztli
+acaxotlan
+tapayolli 1
+huitziloxitl
+acapitzactli
+chicahuiztli
+hueyicpalli
+tomincalli
+tlacohualocoyan
+icnihuan
+panquetzalli
+pantli 1
+pamitl
+acalcuachpamitl
+mecahuehuetontli
+temamatli
+altic
+altia
+maltia 1
+tema 2
+nealticaxitl
+alticalli
+nealtimaloyan
+alticaltin
+olmaitl
+tepozohtli
+chotic
+apatiuh
+apatiuhqui
+amopatic
+tentzoniztatic
+tentzontli 1
+tentzontliltic
+tentzonchilcoztic
+nacacoyonqui
+nacacoyonchihuani
+tentzonyo
+Barbadiah
+popolocatl 1
+zacachichimecatl
+atlacatl 1
+tlacamohehuetl
+popoxoa
+neximaloyan
+teximani
+tenchalli
+Barcelona
+acalli
+axinitl
+tlaxuani
+ixpetzoa
+acalton
+tepozhuitzoctli
+huitzoctli
+ocyatl
+atlacomolli
+comolli
+tepoztlaconeyecolli
+tlamamalihuani
+chamatl 2
+tlachpanani
+tlachpani
+tlachpa
+tlachpantli
+poxtli
+xilantli
+itetl
+xixiahuac
+cuauhcomitl
+tlacanepanaltepetl
+calpolli
+tepalcatl
+azoquitl
+tlatamachiohualoni
+monequi 1
+chiquiuhtapayoliztli
+cenca huel
+ixachi
+iquimeh
+tepalconetl
+tlacolli
+tlazolli
+zolyocan
+cuauhtlacotl
+tilmatematztli
+necaliliztli
+chicahuac huitzoctli
+tepozpatzcaloni
+neloayotl
+cuauhpetlacaxitl
+cuauhcaxitl
+tecuaquiyotl
+tecuatequiloyan
+cuatequia
+tecuaquiliztli
+conetzintli
+conenetl
+topocatl
+oni
+i 2
+atli
+iltequi
+conene
+itli
+comilli
+tlailli
+tlapiazoiliztli
+cuamecatl
+Belarruxia
+belxitecatl
+Belxica
+Hueycopan
+hueycopatl
+cualnezcayotl
+chichipaltic
+quetzaltic
+cualtzin
+ahuatomatl
+Hueymolpan
+tlateochihualiztli
+tlateochihuani
+teicneniliztli
+tlatlacayotl
+Benin
+xocoyotl
+camohtomatl
+Berlin
+tlatlauhtic
+tlatlauhti
+caltzamaxtli
+Bermudiah
+Bernia
+tetzmazatl
+atezquilitl
+tenamiqui
+tempitzoa
+tempitzoliztli
+atlacamani 1
+tecuani
+tlazaloloni
+b
+teoamoxtli
+tlilmachiamoxtli
+amoxtlatiloyan
+amoxiuhtlatiani
+acolnacayotl
+huizi
+huiziquetla
+omemalacatl
+tlalnocpilhualiztli
+teictliani
+ximopanolti
+Ximopanolti timochtin
+maxaltic
+maxa
+camazontli
+Bilbaotl
+ometlahto
+amatomin
+huehca machiolli
+neminiliztlamatiliztli
+neminiliztlamatini
+Burmia
+burmiatl
+chichilamatl
+achcihtli
+chichicolli
+cuilontli
+cuilonyotl
+cihuaicutontli
+icutontli
+tlacaxolotl
+itzualiztli
+ayotic
+huitznahuatl
 </div>	 
 		 
 	 </body>
