--- a/index.html
+++ b/index.html
@@ -1459,6 +1459,181 @@ bisonte
 bisturí
 bizcoso
 biznaga
+blanco
+blancura
+blancura
+blando
+blando
+blanqueado
+blanquear 
+blasfemar
+blasfemia
+blasfemo
+bledo
+bloque
+blusa
+blusa
+boa
+boca abajo
+boca
+bocado
+bocas
+bocina
+bodega de maíz
+bodega
+bodoque
+bofe
+bofetada
+bofetear 
+bofo
+Bogotá
+bogotón
+bola de billar
+bola de estambre
+boleibol
+Bolivia
+boliviatl 
+bolo
+bolos
+bolsa
+bolsa
+bolsa
+boludo
+bomba de agua
+bomba
+Bombay
+bombero
+bondad
+bondad
+bonito
+boquilla
+bordón
+borra
+borrachera
+borracho
+borrador
+borrar 
+borrego cimarrón
+borrego
+borrico
+bosal
+Bosnia y Herzegovina
+bosnio
+bosque
+bosque
+bosque montañoso
+bosque tenebroso
+bosque virgen
+bostezo
+bota
+bote de basura
+bote de basura
+bote de basura
+botella
+botes
+botiquín
+botón apagador
+botón de ropa
+botón
+botswana
+botswano
+boulevard
+boulevard
+boutique
+bóveda celeste
+bóveda
+bóveda palatina
+ear
+eo
+boya
+bramar
+bramido
+brasa
+brasíer
+Brasil
+brasileño
+Brasilia
+braulio
+bravo
+bravo
+bravos
+brazalete de oro
+brazalete
+brazalete
+brazo de escudo
+brazo de palanca
+brazo
+brazo torcido
+brebaje
+breve
+brillante
+brillantez
+brillar
+brillo
+brillo
+brincar
+brinco
+brisa del mar
+brizna
+broche
+brócoli
+brócoli
+broma
+broma
+bromear
+bronceado
+brotado
+brotar
+brote de tierra
+bruja
+brujo
+Brunei
+bruñido
+bruñir
+bruñir 
+Bruselas
+bruto
+bubas
+buceo
+buda
+budismo
+budista
+buenas noches
+buenas tardes
+bueno
+bueno
+buenos días
+buenos días
+buenos
+buey
+bufanda
+bufón
+búho
+búhos
+buitre
+Bulgaria
+búlgaro
+buque
+burbuja
+burbujear
+burdel
+burdel
+Burkuna Faso
+burla
+burlado
+burlar
+burlón
+burlón
+burra
+burro
+Burundi
+buscado
+buscador
+buscar
+busqueda
+Bután
+butanés
+buzo
 </div>
 
 <div class="nahuatl">
@@ -2884,6 +3059,181 @@ tlacaxolotl
 itzualiztli
 ayotic
 huitznahuatl
+iztatic
+iztacayotl
+aztapiltic
+patzic
+papatztic
+tlaiztalli
+iztalia
+huexcatlahtoa
+huexcatlahtolli
+huexcatlahto
+cuauhquilitl
+centlacotontli
+huipiltontli
+huipilli
+mecacoatl
+ixtlapachitoc
+camatl
+cencamatl
+camactin
+tlahtoaqui
+cuetzcomitl
+tlaliloyan
+telolotli
+chichita
+ixtlatziniliztli 1
+ixtlatzinia
+zonetic
+Bogota
+camatzonyo
+tlachpatolli
+tlatetectli
+matopetiliztli
+Bolivia
+boliviano
+necuauhmotlalli
+necuauhmotlaliztli
+xiquipiltontli
+tanatl 1
+xiquipilli 1
+tepocatl
+atlequicahualoni
+ahuachuaztli
+Bombaya
+tlacuehuiani
+cuallotl
+cuallotli
+chipahuac 1
+acamapichtli
+topilli 1
+ichcatlapopoloac
+tlahuaniliztli
+tlahuanqui
+tetlaixpolhuiani
+ixpolhuia
+mazaichcatl
+ichcatl 2
+axnoconetl
+ayaquimatli
+Bosnia ihuan Herzegovia
+bosniatl
+cuauhtlahtli
+cuauhtlan
+acacalocuauhtlan
+cuauhayauhtlan
+cuauhixtlahuatlan
+cochcamachaloliztli
+ehuatehuatl
+zolcaxitl
+tlazolcaxitl
+tepozcaxitl
+tehuiloapaztli
+tepozcaxtin
+pacaxitl
+yoloquimilli
+totomolli
+miuhqui
+botzhuaniatl
+botzhuantecatl
+ochpantlaqui
+cuauhohtli
+tilmacalli
+ilhuicalpan
+tetzoquitecalli
+camatapalli
+tolonhuia
+neyaoliliztli
+amachiotl
+tecoyoa
+pipitzquitl
+tlexochtli
+tlaxochtli
+Brasilia
+brasiltecatl
+Brasilia (altepetl)
+yaoxotlaltl
+ocelo
+tlahuele
+ocelomeh
+teocuitlamatemecatl
+maquiztli
+matemecatl
+chimalmaitl
+tlacuamihualoni
+matzopaztli
+acoltic
+zazaltic
+achic
+petztic
+momochcayotl
+petlani
+momochcatl
+tlanextli
+tzicuini
+tzicuiniliztli
+amixtli
+ahuitatli
+tlapiltic
+cuauhtontzin
+cuauhton
+huetzcaliztli
+camanalli
+camanatlahtoa
+tonalmicqui
+xochtli
+cueponi
+toctli
+cihuanahualli
+nahualli
+Brunia
+petzolli
+petlalia
+calania
+Bruxelia
+atlacamachtilli
+nanahuatl
+atlancalaquiztli
+budateotl
+budayotl
+budatlacatl
+cualli yohualtin
+cualli teotlactin
+cualli ic
+cualli
+cualli tonaltin
+panolti
+yeyectin
+cuacuahueyotl
+ichcamecatl
+nenexolotl
+tecolotl
+tetecolo
+cozcacuauhtli
+Bulgaria
+bulgarinecatl
+acalpolli
+axitontli
+aapopoti
+ahuiancalli
+auhyancalli
+Burquinia Faso
+cacayahuatl
+cacayahuac
+cacayahua
+tecamahuitl
+huetzcac
+axnocihuatl
+axnotl
+Burundia
+tlatemoalli
+tlatemoani
+temoa 1
+tlatemoliztli
+Butania
+butaniatl
+atlancalaqui
 </div>	 
 		 
 	 </body>
