--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 			 });
 		</script>
 		<style>
-			
+		
+		body{
+		font-size: 20px;
+		background-color: black;
+			}
+		
 		.caxtilancopa {
 		display: none;
 		}
