--- a/index.html
+++ b/index.html
@@ -1639,6 +1639,444 @@ busqueda
 Bután
 butanés
 buzo
+cabal
+caballero
+caballito de mar
+caballo de arzón
+caballo
+caballo
+caballo negro
+caballos
+cabaña
+cabecera
+cabellera de papel
+cabellera
+cabello crespo
+cabello de maíz
+cabellos
+caber
+cabestro
+cabeza
+cabeza
+cabeza
+cabeza rapada
+cabezón
+cable plástico
+cabo
+Cabo Verde
+cabra
+cabra
+cabrón
+Cacahuamilpa 
+cacahuate
+Cacama 
+cacao
+cacaraquear
+cacería
+cacerola
+cachete
+cachorro
+cacique
+cacomiztle
+cada siete
+cada tercer día
+cada uno por su parte
+cada
+cadáver
+cadena de oro
+cádiz
+caducado
+caducar
+caduco
+caer el rayo
+caer y levantarse
+caer
+caer
+café
+café obscuro
+café
+cafetera
+cafetería
+cafeto
+cagado
+cagar
+caída de pelo
+caída
+caído
+caimán 
+Cairo
+caja de cartón
+caja de cerillos
+caja de pino
+caja
+caja
+caja
+cal
+cal
+calabacín
+calabaza amarilla 
+calabaza
+calabaza larga
+calabaza negra
+calabaza seca
+calabaza silvestre
+calabazas
+calambre
+calandria
+calavera
+calcañar
+calcetero
+calculadora
+calculadora
+Calcuta
+caldera
+caldo de aves
+caldo de camarón
+caldo de pescado
+caldo de pollo
+caldo de res
+caldo m
+calefacción
+calendario gregoriano
+calendario
+calendario
+calentador
+calentar
+calentura
+Cali
+cálido
+cálido
+caliente
+California
+californiano
+Calixtlahuaca 
+calizo
+callado
+callado
+callar
+callar
+calle
+callejón
+callo del pie
+calloso
+calma del mar
+calma
+calmado
+calmado
+Calnali 
+calor
+Calpulalpan 
+calumniar
+caluroso
+calvario
+calvo
+calzada de los muertos
+calzada
+calzar
+calzón de manta
+calzón
+calzón
+cama
+camaleón
+camaleón
+camaleón pequeño
+cámara de video
+cámara
+cámara fotográfica
+camarón
+camarote
+Camaxtli
+cambiado
+cambiado
+cambiar de ropa 
+cambiar de voz en los varones
+cambiar
+cambio de voz en los varones
+cambio ideológico
+cambio
+cambio
+Camboya
+camboyano
+camello
+camellón
+Camerún
+camerunés
+camilla
+caminante
+caminante
+caminar
+caminata
+camino cerrado
+camino
+camión de carga
+camioneta
+camisa
+camiseta
+camote
+campana
+campanario
+campanero
+campanilla bucal
+campechano
+Campeche 
+campeón
+campero
+campesino
+campo cultivado
+campo cultivado
+campo de batalla
+campo deportivo
+campo
+Canadá
+canadiense
+canalero
+canalón
+canario
+canario 
+canario
+canas
+canasta
+canasto cilíndrico 
+canasto de cañas 
+canasto de carrizos
+Canatlán 
+cancha de pelota
+cancionero
+candado
+candelero
+canela
+cangrejo 
+canoa
+canoero
+canonizar
+canotaje
+cansado
+cansado
+cansado
+cansancio
+cansancio
+cansar
+cansar
+Cantabria
+cantabro
+cantante
+cantante ranchero
+cantante
+cantar
+cantárida
+cántaro de plumas
+cántaro
+cantinero
+canto alegre
+canto de antorcha
+canto de mujer
+canto de primavera
+canto gregoriano
+canto guerrero
+canto
+canto otomí
+canto triste
+caña de azúcar
+caña de maíz
+caña de pescar
+caña de río
+cañada
+cañas 
+cañaveral 
+cañón
+cañón
+caoba
+caoba 
+capa de jaguar
+capa de tierra
+capa
+capar 
+caparazón
+caparazón
+capaz
+capilla
+capilla
+capitán aéreo
+capitán de combate
+capitán de guerra
+capitán del barco 
+capitán
+capítulo
+cápsula de medicamento
+capucha
+capulín
+capulín
+capulín seco
+capullo de mariposa
+capullo
+cara de luna
+cara del sol
+cara
+Caracas
+caracol de agua
+caracol
+caracol marino
+caracol sonoro
+caras
+carbón encendido
+carbón
+carcacha
+carcajear
+cárcel
+cardado
+cardenal
+cardenal
+cardo
+cardón 
+careta
+cargado
+cargador
+cargar 
+caridad
+caritativo
+carnal
+carnal
+carne de águila
+carne de cerdo
+carne de codorniz
+carne de conejo
+carne de cordero
+carne de fiera
+carne de la cara
+carne de la espalda
+carne de la mano
+carne de la pantorrilla
+carne de la pierna
+carne de la rodilla
+carne de labio
+carne de pato
+carne de pavo
+carne de perro
+carne de pollo
+carne de pollo
+carne de res
+carne de serpiente
+carne de venado
+carne del cuello
+carne del dedo de la mano
+carne del dedo del pie
+carne del ombligo
+carne del pene
+carne del pie
+carne del tobillo
+carne
+carne humana
+carnero
+carnes
+carnicería
+carnicero
+carnoso
+carnudos
+caro
+carpa
+carpeta
+carpintero
+carrasco
+carreta
+carretera
+carrilludo
+carrizal
+carrizo
+carrizo solar
+carro de bomberos
+carroñero
+carrusel
+carta
+carta terrestre
+cartero
+cartílago
+cartucho
+casa de adobe
+casa de ladrillo
+casa de los guerreros águila
+casa de los guerreros tigre
+casa del maíz
+casa
+casa
+casa grande
+casamiento
+casarse el hombre
+casarse la mujer
+casarse
+casas
+casas
+cascabel
+cascabel
+cascabel
+cascabelear
+cascada
+cascajo
+cascajo
+cáscara de chile
+cáscara de huevo
+cáscara de naranja
+cáscara de nuez
+cáscara
+casco
+caserío
+casero
+casero
+caseros
+caseta de vigilancia
+caseta
+casete
+casi
+casino
+caspa
+caspa
+caspudo
+castaña
+castañero
+castañuelas
+castástrofe
+castellanidad
+castellanismo
+castellano
+castellanos
+castidad
+castigador
+castigar
+castigar sin piedad
+castigo divino
+castigo
+castigo
+Castilla
+Castilla La Mancha
+Castilla y León
+Castilla-La Mancha
+castillo de cohetes
+castillo
+castor
+casucha
+catalán
+Cataluña
+catarina
+catedral
+catedrático
+catolicismo
+católico
+catorce
+caucho
+causa
+cáustico
+cautela
+cautivar
+cautiverio
+cava
+cavar para sacar agua
+cavernoso
+caviar
+cazador
+cazadora
+cazar
+cazar animales
+cazar conejos
+cazar venados
 </div>
 
 <div class="nahuatl">
@@ -3239,6 +3677,444 @@ tlatemoliztli
 Butania
 butaniatl
 atlancalaqui
+huelizqui
+tlacatzintli
+acahuayotontli
+neyecopepechtli
+cahuayo
+cahuayotl
+tlilcahuayotl
+cahuayomeh
+xacalli
+tontzontlan
+amatzontli
+tzoncalli
+acopaitztiuhtzontli
+xolotzontli
+tzontzontin
+yehui
+cahuayomecatl
+cuaitl
+tzontecomatl
+mezontli
+cuaochipantli
+cuatexpetlac
+olmecatl 2
+couhyotl
+Capoverdia
+cuacuauhtezontli
+tentzontli 2
+oquichtenzonpolli
+Cacahuamilpan
+tlalcacahuatl
+Cacama
+cacahuatl
+tetzatzi
+amiliztli
+tepozxoctli
+camatetl
+itzcuinconetl
+cachicatl
+cacomiztli
+chichicome
+yeimoztlatzinca
+cecentetl
+cecen
+mictetl
+teocuitlamecatl
+teocuitlatecomatl
+atocnicmatilli
+ayocnicmati
+ayocnicmatini
+tlahuitecoa
+ollinia
+temo
+huetzi
+cafetzin
+poctic
+camiltic
+cafecaxitl
+cafecalli
+cafecuahuitl
+cuitlayo
+cuitla
+tzoncatepehuitl
+huetzquiliztli 1
+huetzqui
+acatepontli
+Cairo
+amatzoncalli
+tleamacalli
+ocopetlacalli
+petlacalli
+callotl
+caxitl
+iztatenextli
+nexactli
+ayoconetl
+tamalayotli
+ayotli
+alacatl
+tecomayotli
+tzonyacayotli
+tlalayotli
+ayotin
+huapahuiztli
+chiltototl
+tzontecotl
+quetzolli
+caltzachiuhqui
+pohualhuaztli
+tlapoaloni
+Calcutan
+tepozapaztli
+totolayotl
+chacalayotl
+michayotl
+cuanacuayotl
+nacayotl
+ayotl 2
+totoniloni
+tonalpohualquixtiani
+tonalpohualamoxtli
+tonalpohualli
+pepechtotoniloni
+totonia
+totonquiliztli
+Calli (Colombia)
+yamanic
+totonqui
+totonic
+California
+californitecatl
+Calixtlahuacan
+nexalli
+chicuacolli
+mocahuani
+mocahua
+cahua 1
+ohcalli 1
+caltzalantli
+caczolli
+chacayolli
+cantimaniliztli
+azomalli
+cactihuetzic
+cecehuilo
+Calnalli
+totomiliztli
+Calpolalpan
+xictlaza
+tlatotoniyo
+elpanchichico
+cuaxipetztic
+miccaohtli
+tepectli
+cactia
+tozotzomaxtli
+maxtli
+maxtlatl
+tlapechtli
+cuatapalcatl
+tapayaxin
+tzompetacatl
+videotlatolcuepaloni
+apitzalli
+tlatolcuepaloni
+chacalli
+acalcochihuayan
+Camaxtli
+tlacuepalli
+ayoc
+pati
+tozcachachalihui
+patla
+tozcachachaliuhyotl
+zalihuitl
+tlacuepaliztli
+copilli 3
+Cambodia
+cambodinecatl
+cameyotl
+cuemitl
+Camerunia
+cameruniatl
+tapechtli
+ohtocac
+nenemini
+nenemi
+nenemiliztli
+ohtlatzacuhtli
+ohtli
+tepoztlameni
+temalacaxitl
+nemetzhuiliztli
+quechxicolli
+tlalcamohtli
+tlatzilinitepoztli
+tepoztlapilcoyan
+tlatziliniani
+cuicatecomatl
+xicalancatl
+Xicalanco
+tlamahuichihuani
+ixtlahuatlacatl
+milquitqui
+ixtlahuamilli
+tlacauhtli
+chimaltlalli
+tlaxahuilcan
+ixtlahuatl
+Canauhtlan
+canauhtecatl
+apanecatl
+atliohui
+canariotl
+piolli
+coztototl
+tzoniztalli
+chiquihuitl
+colotli 3
+acachiquihuitl
+acatanatli
+Canatlan
+teotlachtli
+cuicamatl
+tepoztlazacualoni
+xicocuitlaochiuhqui
+ahuiacpopotli
+atecuiztli
+acaltontli
+acaleh
+mahuitzotia
+atlanetlaminaliztli
+tlaciahuitilli
+ciammicqui
+ciamicqui
+cochiliztli
+ciahuiztli
+ciyahui
+ciahui
+Cantabria
+cantabriatl
+tlacuicac
+ixtlahuacuicani
+cuicani
+cuica
+tlalxiquipilli
+aztacomitl
+apiaztli
+ocnaqui
+ahuilcuicatl
+cuicatlahuilli
+cihuacuicatl
+xopancuicatl
+teocacuicatl
+yaocuicatl
+cuicatl
+otomicuicatl
+choquizcuicatl
+acaitetl
+ohuatl
+achicolhuaztli
+aacatl
+tlacomolli
+acameh 1
+acatlan
+tepozapilhuamina
+atlauhtli
+cahuatl
+tzopilocuahuitl
+ocelotentlapalli
+tlalnepantli
+tilmatli
+atequixtia
+callotl
+ayocallotl
+huelitini
+teocaltepiton
+teocalcuitlapilli
+ehecatepoztlahtoani
+yaotequihuac
+yaoquizcayacanqui
+acaltepachoani
+achcauhtli
+amoxexeliztli
+olpatli
+calalahtli
+capolcuahuitl
+capolli
+capolhuac
+tecilli
+cuchipilotl
+mexictli
+tonalixco
+xayacatl
+Caracah
+atecocolli
+tochacatl
+tecciztli
+coyohualli
+ixtin
+tlexoctlalilli
+tecolli 1
+tepozmalacazolli
+huehuetzca
+teilpiloyan
+pochinqui
+tecuhteopixqui
+cuapixtototl
+huitzquilitl
+cuitlahuitztli
+xayactli
+tlamamatl
+zacani
+tlamamaltia
+tetlazotlaliztli
+amozaneltzoyani
+eziciuhtli
+nacacuallo
+cuauhnacatl
+pitzonacatl
+zolnacatl
+tochnacatl
+ichcatlnacatl
+tecuanacatl
+ixnacatl
+elnacatl
+mapalnacatl
+cotznacatl
+metznacatl
+tlancuanacatl
+tennacatl
+canauhnacatl
+hueixolonacatl
+itzcuinacatl
+cuanacatl 2
+totolnacatl
+cuacuauhnacatl
+coanacatl
+mazanacatl
+quechnacatl
+mapilnacatl
+xopilnacatl
+xicnacatl
+tepolnacatl
+xopalnacatl
+quequeyolnacatl
+nacatl
+tlacanacatl
+oquichichcatl
+nacameh
+nacanamacoyan
+nacanamacani
+nacayo
+nacayomeh
+patio
+cuitlapetlatl
+petlazolli
+cuauhxinqui
+ahuahuatl
+cuauhtemalacatl
+chiapopohtli
+cacamac
+acazacayotl
+acazacatl
+acatonalli
+tlacehuicalmimilolli
+ominacatini
+cahuayomalacatl
+amatlacuilolli
+amahohtli
+amatlacuilotzacuani
+zazaliuhyantli
+temitl
+xamicalli
+xamixcalli
+cuauhcalli 1
+ocelocalli
+cencalli
+calli
+chantli
+paquitl
+nemictiliztli
+cihuatia
+oquichhuatia
+namictia 1
+caltin
+chantin
+coacuechtli
+zazanacalli
+coyolli
+zazanaca 1
+atemoztli
+calalli
+tetzicuehualli
+chilehuatl
+totolcallotl
+lalaxehuatl
+cacallotli
+cacallotl
+cuachimalli
+callan
+chaneh
+caleh
+calehque
+tlaxillacalli
+caltepiton
+caxeti
+azqui
+tlamatilcalli
+cacapaxtli
+cuatequizquitl
+cacapaxtic
+cacahuacomitl
+cacahuacomicuahuitl
+macacapactli
+tetzahuiztli
+caxtiltecayotl
+caxtiliztli
+caxtitl
+caxtiltecah
+chipahuacaneliztli
+tlatzacuiltiani
+tlatzacuiltia
+iyohuilia
+iyohuilcayotl
+tlayohuiliztli
+tlamamalli 1
+Caxtillan
+Caxtillan In Manchacapan
+Castillan ihuan Leon
+Manchapan
+caxihuicuahuitl
+caxtilcalli
+atuzan
+calzolli
+catalatl
+Catalonia
+micazoyolli
+tlamatilizteocalli
+tlamatiliztemachtiani
+tlalticpaquixtianayotl
+tlalticpaquixtiani
+matlactli huan nahui
+olcuahuitl
+tetlachihuiliztli
+xocoyatl
+nematiliztli
+maltia 2
+mallotl
+occalli
+atataca
+oztotla
+michtetl
+yolcamini
+ehuatlamamalli
+ami
+tlamictia
+tochtemohua
+mazatemohua
 </div>	 
 		 
 	 </body>
