--- a/index.html
+++ b/index.html
@@ -2077,6 +2077,305 @@ cazar
 cazar animales
 cazar conejos
 cazar venados
+cazuela
+cebada
+cebolla
+cebra
+cedazo
+ceder
+cedro
+cedro
+cegado
+cegar
+cegera
+ceguera
+ceiba
+ceja
+celar
+celebrar
+celos
+celoso
+celta
+célula
+celulitis
+cementerio
+cemento
+cempasúchil
+cempasúchuil
+cena
+cenar
+cenicero
+ceniza
+cenote
+censado
+censo
+centella
+centella
+centeotl 
+centinela de barco
+Centla 
+centro comercial 
+centro de la ciudad
+centro de la ciudad
+centro de la tierra
+centro del universo
+centro
+cenzontle
+ceñidor
+cepa
+cepillado
+cepillar 
+cepillo de dientes
+cepillo
+cepillo
+cera
+cerámica
+cerca
+cerca
+cercano
+cerceta
+cerco
+cerda
+cerebro
+ceremonia
+cereza
+cerilla
+cerillo
+cerillo
+cero
+cerrado
+cerradura
+cerramiento
+cerrar
+cerrar herida
+cerrar la boca
+cerrar la mano
+cerrar los ojos
+cerros
+cervato
+cerveza
+cesta de palma
+cetro
+chabacano
+chachalaca
+chachalaca
+Chad
+chal
+Chalatenango 
+chalca
+chalca
+Chalchicomula
+Chalchiuhtlicue 
+Chalco 
+chaleco azteca
+chamaco
+chamagoso
+chamanismo
+chamarra de piel
+chamarra
+champaña
+champurrado
+Chapala 
+chapitel
+chapopote
+Chapulhuacan 
+chapulín
+chapuzón
+charal
+charco
+chatarra
+chayote amargo
+chayote
+chayote tierno
+chayotera
+checo
+checo
+cheneque
+chi
+chía
+chiapaneco
+Chiapas 
+chícharo
+chicharrón
+chichicuilote
+chichimecas
+chichón
+chicle
+chicloso
+chico
+chico
+chico
+Chicomecoatl 
+Chiconcuac 
+chicote
+chicozapote 
+chiflador
+Chihuahua 
+chihuahuense
+chihuahuense
+chihuahuense
+chilaca
+chilacayote
+Chilapa 
+chilaquil
+chilate
+Chilchota 
+Chile
+chile ancho
+chile cascabel
+chile chipotle
+chile guajillo
+chile güero
+chile habanero
+chile
+chile morita
+chile morrón
+chile mulato
+chile negro
+chile piquín
+chile poblano
+chile rojo
+chile seco
+chile verde
+chile-atole
+chileno
+chilero
+chillador 
+chillido
+chillón
+chilmole
+chilpachole
+Chilpancingo
+chilpayate
+Chimalistac 
+Chimalma 
+Chimalpopoca 
+Chimaltenango 
+chimenea
+chimenea
+chimpacé
+China
+chinampa
+chinampa
+chinampa
+Chinandega
+chinche
+chingadera
+chingar
+chino
+chino
+Chipre
+chipriota
+chiquitín
+chiquito
+chiquito
+chirimoya
+chirimoya
+chisme
+chismear 
+chismorrear
+chismoso
+chismoso
+chispa
+chiste
+chivo
+chocarrero
+chocolate amargo
+chocolate blanco
+chocolate caliente
+chocolate en polvo
+chocolate
+chocolatero
+chofer
+Cholula 
+cholulteca
+Choluteca 
+chorro de agua
+chorro
+chubasco
+chuepete
+chupadero
+chupador
+chupar
+chupar
+chupetón
+ci
+cicatriz
+ciclista
+ciego
+cielo despejado
+cielo
+cielo
+cielo
+cielo nublado
+ciempiés
+cien
+ciénaga
+ciencia
+ciencia
+científico
+ciento cuareta
+ciento ochenta
+ciento secenta
+ciento veinte
+ciertamente
+cierto
+cierto
+cigarra de agua
+cigarra
+cigarro
+cigüeña
+Cihuametztli
+cilantro
+cilindro
+cima
+cimarrón
+cimiento
+cinco flores
+cinco
+cincoate
+cincuenta
+cincuenta y cinco
+cine
+cine
+cinematografía
+cinematografo
+cinta adhesiva
+cinta cinematográfica
+cinta métrica
+cintura
+cintura
+cintura
+cinturón
+Cipactonal
+ciprés
+circinsidar 
+circo
+circular
+circulo
+circuncidado
+circuncisión
+cirrostrato
+ciruela amarilla 
+ciruela
+ciruelo
+cirugía
+cirujano
+cisne
+cita
+citado
+citar
+Citlalcuicani 
+ciudad capital
+ciudad de Campeche 
+ciudad de Durango 
+Ciudad de México
+Ciudad de Nueva York
+Ciudad del Cabo
+ciudad
+ciudadano
+ciudades
+civilización	
 </div>
 
 <div class="nahuatl">
@@ -4115,6 +4414,305 @@ ami
 tlamictia
 tochtemohua
 mazatemohua
+tlacualcaxitl
+tlaulli
+xonacatl
+ocelocahuayotl
+tzetzelotl
+itlania
+ahuehueocotl
+teocuahuitl
+ixpopoyolli
+ixpopoyoti
+ixtlaltemiliztli
+ixpopoyotl
+pochotli
+ixcuamolli
+chahuatilia
+niquitoa
+chahuaztin
+chicotlamatini
+celtlacatl
+yolizachitontli
+tzinqueztamalli
+tetocoyan
+tenextli
+tzompanxochitl
+cempoalxochitl
+cochcayotl
+cochcayotia
+nexcaxitl
+tleconextli
+xicalantli
+tlaxtlahuilini
+tlaxtlahuiliztli
+tlamoyotl
+pepetlacatl
+centeotl
+acalpixqui
+Centlan
+hueytlacoyan
+altepenepantla
+xolalpan
+cemanahuayollo
+cemanahuac yollotli
+nepantla
+centzontli 1
+paxatl
+tlaltzontli
+tlaixpetlahualli
+ixpetlahua
+tlanchichiconi
+tlachipahualli
+tzecahuaztli
+xicocuitlatl
+xiuhtepalcatl
+achca 
+amo huehca
+inahuac
+xomotl
+chinamitl
+coyametl
+cuayolotl
+ihtotl
+chilcapolin
+nacazcuitlatl
+tlezacatl
+tleamatl
+xictli (amopohualli)
+tlatzacualli 1
+ilpicayotl
+tlapepecholiztli
+tzacua
+tetzolihui
+camapiqui
+mapiqui 2
+ixpiqui
+tepemeh
+mazaconetl
+teixhuinotl
+tanatli
+acatl 2
+chahuacatl
+chachalacatl
+chachalacatototl
+Chadia
+quexquemitl
+Xalatenanco
+xalcatl (chalcatl)
+chalcatl
+Chalchiuhcomollan
+Chalchiuhtlicue
+Xalco
+xicolli
+chamaco
+chamaocozoc
+tlalnetocayotl
+ehuatilmatli
+ichcatlamamalli
+popotzoctli
+xocolatolli
+Chapallan
+cuauhxahuiliztli
+chiapopotl
+Chapolhuacan
+chapolin
+apoxontli
+michzacuani
+amanatli
+tepoztlazolli
+chayochichic
+chayotli
+chayocelic
+chayoyotl
+chequiatl
+chequitecatl
+chanequi
+ch
+chiatl
+chiapatl
+Chiapan
+exotl
+ehuatotopotl
+chichicuilotl
+chichimecah
+xiquipilihuiztli
+chictli
+chitic
+-tepiton
+chiquitl
+-tontli
+Chicomecoatl
+Chicomecoac
+chicotli
+xicotzapotl
+tlanchiquini
+Chihuahuac
+chihuahuani
+chihuahuatl
+chihuahuatecatl
+chilacatl
+celicayotli
+Chilapan
+chilaquilli
+chilatl
+Chilchotan
+Chillan
+chilchilli
+chilayacatl
+chilpoctli
+chilzotl
+chilcoztli
+cocochilli
+chilli
+capolchilli
+chiltomatl
+chilhuactli
+tlilchilli
+chiltecpin
+tlalchilli
+cuauhchilli
+chilhuacqui
+chilchotl
+chilatolli
+chiltecatl
+chilhuac 1
+pipitzqui
+choquiztli
+tlatziztli
+chilmolli
+chilpacholli
+Chilpantzinco
+chilpayatl 2
+Chimaliztac
+Chimalmac
+Chimalpopoca
+Chimaltenanco
+tlecalli
+xamixcaltexcalli
+cotzotl
+Xina
+chinampan
+achinamilpan
+chinamilpan
+Chicnauhtecan
+texcan
+chincualactli
+chincua
+xinatl
+cuachtic
+Chipria
+chipriatl
+chiquitzin
+chiquiton
+tepitzin
+lamatzapotl
+lamatl
+chimizcolli
+aachcui
+chimizcohuia
+chimizcohuic
+mihtoac
+tlemoyotl
+zazamihtoac
+oquichtenzontli
+nexoxcho
+chichixocolatl
+iztaxocolatl
+xocolatzin
+xocolapinolli
+xocolatl
+xocolatic
+calmimiloani
+Cholollan
+chololtecatl
+Chololtecac
+atlichololiztli
+chololiztli 1
+quiauhton
+chipontli
+achichinqui
+chichinqui
+pachicihina
+chichina 1
+chipitontli
+c
+tzotzohuiztli
+omemacani
+ixpopoyoc
+tlamichpantoc
+ilhuicatl 1
+Chicnauhtopan
+huilohuayan
+tlatepepantoc
+petlazolcoatl
+macuilpoalli
+chalcani
+tlamatiliztli
+tlatilizmatiliztli
+tlatilizmatini
+chicompoalli
+chicnauhpoalli
+chicuepoalli
+chicuacempoalli
+cazanelli
+neltic
+cequintin
+achichiquilichtli
+chiquilichtli
+tlachinolli
+caxtilaztatl
+Cihuametztli
+zacalicpatli
+comitl 2
+tzonyotl
+cimatl 1
+tzintetl
+macuilxochitl
+macuilli
+cincoatl
+ompoalomatlactli
+ompoaloncaxtolli
+ixiptlayolli
+ixiptlayocalli
+ixiptlayoliztli 
+ixiptlayotiani
+tzacauhmecatl
+mecazanilli
+tlatlamachiomecatl
+pitzahuauhtli
+cicuilli 2
+topitzahuayan
+ehuanelpilolli
+Cipactonal
+tlatzcan
+xipincuayotequi
+circo
+yahualtic
+yahualli
+tlaxipincuatequini
+xipincuayotl
+tonatiuhcalli
+atoyaxocotl
+mazaxocotl
+mazacuahuitl
+texotlaticiliztli
+texotlaticitl
+quetzalcanauhtli
+tenahuatiliztli
+tenahuatilli
+nahuatia 1
+Citlalcuicani
+altepetepantlahtocan
+Yaocaltenco
+Ocopetlan
+Mexico Tenochtitlan
+Manhatitlan
+Capotitlan
+altepetl
+altepetlacatl
+altepemeh
+altepetlacayotl
 </div>	 
 		 
 	 </body>
